--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,167 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --background-color: #2c3333;
+  /* --primary: #b7b78a; */
+  --primary: #a5c9ca;
+  --secondary: #dddddd;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: "Courier New", Courier, monospace;
+  background: var(--background-color);
+  color: var(--background-color);
+  line-height: 1.5;
+  font-size: 3rem;
+}
+
+h3 {
+  text-transform: capitalize;
+  line-height: 1.25;
+  margin-bottom: 0.75rem;
+}
+
+h3 {
+  font-size: 2rem;
+}
+
+p {
+  margin-bottom: 1.5rem;
+  color: var(--clr-grey-5);
+}
+@media screen and (min-width: 800px) {
+  h3 {
+    font-size: 1.75rem;
+  }
+
+  body {
+    font-size: 1rem;
+  }
+
+  h3 {
+    line-height: 1;
+  }
+}
+
+.section-center {
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 35rem;
+  margin-top: 8rem;
+}
+@media screen and (min-width: 992px) {
+}
+
+.section-center {
+  background: #a5c9ca;
+  border-radius: 10px;
+  box-shadow: var(--light-shadow);
+  transition: var(--transition);
+  padding: 2rem;
+}
+
+.alert {
+  margin-bottom: 1rem;
+  height: 1.25rem;
+  display: grid;
+  align-items: center;
+  text-align: center;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+  color: var(--primary);
+  background: var(--background-color);
+  text-transform: capitalize;
+}
+
+.todo-form h3 {
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+.form-control {
+  display: flex;
+  justify-content: center;
+}
+.todo {
+  padding: 0.25rem;
+  padding-left: 1rem;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  background-color: var(--background-color);
+  border-color: transparent;
+  font-size: 1rem;
+  flex: 1 0 auto;
+  color: var(--primary);
+}
+.todo::placeholder {
+  color: var(--primary);
+}
+.submit-btn {
+  background-color: var(--background-color);
+  border-color: transparent;
+  flex: 0 0 5rem;
+  display: grid;
+  align-items: center;
+  padding: 0.25rem;
+  text-transform: capitalize;
+  letter-spacing: 2px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  cursor: pointer;
+  color: var(--primary);
+  transition: 0.5s;
+  font-size: 0.85rem;
+}
+
+.todo-container {
+  margin-top: 2rem;
+}
+
+.todo-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 0.5rem;
+  padding: 0.25rem 1rem;
+  border-radius: 10px;
+  text-transform: capitalize;
+}
+.todo-item:hover {
+  color: var(--primary);
+  background: var(--background-color);
+}
+
+.title {
+  margin-bottom: 0;
+
+  letter-spacing: 2px;
+  transition: 0.5s;
+}
+.edit-btn,
+.delete-btn {
+  background: transparent;
+  border-color: transparent;
+  cursor: pointer;
+  font-size: 1rem;
+  margin: 0 0.1rem;
+  transition: 0.3s;
+  color: var(--background-color);
+}
+
+.todo-item:hover .edit-btn,
+.todo-item:hover .delete-btn {
+  color: var(--primary);
+}
+
+.clear-btn {
+  text-transform: capitalize;
+  width: 10rem;
+  height: 1.5rem;
+  display: grid;
+  align-items: center;
+  background: transparent;
+  border-color: transparent;
+  color: var(--background-color);
+  margin: 0 auto;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: 0.3s;
+  margin-top: 1.25rem;
 }
